# quanskill-shtp-demo

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
outputs_v2/: dictionary_equipment_name_vi_en.csv  dictionary_meter_location_vi_en.csv  energy_gold_daily_by_daynight.csv  energy_gold_daily_by_tariff.csv  energy_gold_daily_equipment.csv
