[project]
name = "sadecdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "numpy<2.0",
    "openai>=1.99.6",
    "openpyxl>=3.1.5",
    "pandas==2.2.2",
    "plotly==5.22.0",
    "prophet==1.1.5",
    "pyngrok==7.1.6",
    "scikit-learn==1.5.1",
    "statsmodels==0.14.2",
    "streamlit==1.36.0",
]

[tool.ruff]
line-length = 150
